--- a/index.html
+++ b/index.html
@@ -9,26 +9,86 @@
       <title>Bootstrap Nav Template</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
       <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="css/all.css">
       <!-- Google Icons -->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
    </head>
    <body>
       <!-- As a heading -->
-      <nav class="navbar fixed-top navbar-light bg-light">
-         <h2 class="navbar-brand mb-0">App Name</h2>
+      <nav class="navbar fixed-top navbar-light text-left  bg-info" style="padding: 0px;">
+         
+         <div class="text-light h4" style="margin: 0px;">
+            <button type="button" class="btn btn-lg btn-light text-info " style="border-radius: 0px 12px 12px 0px;" >
+            <i class="fas fa-user fa-2x"></i>
+            </button>
+            Tackon
+         </div>
       </nav>
       <!-- Begin page content -->
-      <div class="container-fluid">
+      <div class="container-fluid py-2">
          <!-- Home page -->
          <div id="page-home" class="active">
-            <h1>Home Page</h1>
-            <div class="block">
-               <h2>The standard Lorem Ipsum passage, used since the 1500s</h2>
-               "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-               Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC
-               "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-               1914 translation by H. Rackham
+            <div class="card my-1">
+               <div class="card-header">
+                  Featured
+               </div>
+               <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+               </div>
             </div>
+            <div class="card my-1">
+               <div class="card-header">
+                  Featured
+               </div>
+               <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+               </div>
+            </div>
+            <div class="card my-1">
+               <div class="card-header">
+                  Featured
+               </div>
+               <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+               </div>
+            </div>
+            <div class="card my-1">
+               <div class="card-header">
+                  Featured
+               </div>
+               <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+               </div>
+            </div>
+            <div class="card my-1">
+               <div class="card-header">
+                  Featured
+               </div>
+               <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+               </div>
+            </div>
+            <div class="card my-1">
+               <div class="card-header">
+                  Featured
+               </div>
+               <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+               </div>
+            </div>
+
          </div>
          <!-- Feed page -->
          <div id="page-feed" class="inactive">
@@ -62,32 +122,23 @@
          </div>
       </div>
       <!-- Bottom Nav Bar -->
-      <footer class="footer ">
+      <footer class="footer mb-1">
          <div class="container mt-1">
             <div class="row  pl-3 pr-3">
-               <div class="col">
-                  <button type="button" class="btn btn-lg btn-block btn-info" >
-                  <svg class="pt-1" height="24" viewBox="0 0 37 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                     <path d="M17.526 7.26394L6.00161 16.7556V26.9999C6.00161 27.2651 6.10698 27.5195 6.29453 27.7071C6.48209 27.8946 6.73647 28 7.00172 28L14.0062 27.9819C14.2706 27.9806 14.5237 27.8746 14.7102 27.6872C14.8967 27.4998 15.0014 27.2461 15.0014 26.9818V20.9992C15.0014 20.734 15.1067 20.4796 15.2943 20.292C15.4818 20.1045 15.7362 19.9991 16.0015 19.9991H20.0019C20.2672 19.9991 20.5215 20.1045 20.7091 20.292C20.8967 20.4796 21.002 20.734 21.002 20.9992V26.9774C21.0016 27.109 21.0272 27.2394 21.0773 27.3611C21.1273 27.4828 21.2009 27.5934 21.2938 27.6866C21.3868 27.7798 21.4971 27.8537 21.6187 27.9042C21.7402 27.9547 21.8705 27.9806 22.0021 27.9806L29.0042 28C29.2694 28 29.5238 27.8946 29.7114 27.7071C29.8989 27.5195 30.0043 27.2651 30.0043 26.9999V16.7487L18.4824 7.26394C18.3469 7.15475 18.1782 7.09521 18.0042 7.09521C17.8302 7.09521 17.6615 7.15475 17.526 7.26394ZM35.7299 13.7153L30.5043 9.40792V0.750084C30.5043 0.551149 30.4253 0.360363 30.2846 0.219695C30.144 0.0790266 29.9532 0 29.7543 0H26.2539C26.0549 0 25.8641 0.0790266 25.7235 0.219695C25.5828 0.360363 25.5038 0.551149 25.5038 0.750084V5.28871L19.9075 0.684451C19.3705 0.242514 18.6966 0.000883439 18.0011 0.000883439C17.3056 0.000883439 16.6317 0.242514 16.0946 0.684451L0.272217 13.7153C0.196263 13.7781 0.133424 13.8552 0.0872884 13.9423C0.0411533 14.0293 0.0126269 14.1246 0.00333922 14.2227C-0.00594845 14.3208 0.00418463 14.4198 0.0331595 14.514C0.0621343 14.6082 0.109383 14.6957 0.172206 14.7716L1.76613 16.7094C1.82879 16.7855 1.90585 16.8486 1.99291 16.895C2.07997 16.9413 2.17532 16.9701 2.2735 16.9795C2.37168 16.989 2.47076 16.979 2.56507 16.9501C2.65939 16.9213 2.74708 16.8741 2.82313 16.8113L17.526 4.70115C17.6615 4.59197 17.8302 4.53242 18.0042 4.53242C18.1782 4.53242 18.3469 4.59197 18.4824 4.70115L33.1859 16.8113C33.2618 16.8741 33.3494 16.9213 33.4435 16.9503C33.5377 16.9793 33.6367 16.9894 33.7348 16.9801C33.8329 16.9708 33.9282 16.9423 34.0153 16.8962C34.1024 16.85 34.1795 16.7872 34.2423 16.7112L35.8362 14.7735C35.8989 14.6972 35.946 14.6092 35.9746 14.5146C36.0033 14.42 36.0129 14.3207 36.003 14.2223C35.9932 14.124 35.964 14.0286 35.9171 13.9415C35.8702 13.8545 35.8066 13.7776 35.7299 13.7153Z" fill="white"/>
-                  </svg>
+               <div class="col " id="buttonGroup">
+                  <button id="home" type="button" class="btn btn-lg btn-block btn-info py-2 button-active" >
+                  <i class="fas fa-home fa-lg"></i>
                   </button>
                </div>
                <div class="col">
-                  <button type="button" class="btn btn-lg btn-block btn-info" >
-                   
-                     <svg class="pt-0" height="20" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M18.3333 33.0001C21.5875 32.9994 24.7478 31.91 27.3112 29.9054L35.3705 37.9647L37.9628 35.3724L29.9035 27.3131C31.9092 24.7495 32.9992 21.5884 33 18.3334C33 10.2466 26.4202 3.66675 18.3333 3.66675C10.2465 3.66675 3.66667 10.2466 3.66667 18.3334C3.66667 26.4202 10.2465 33.0001 18.3333 33.0001ZM18.3333 7.33341C24.3998 7.33341 29.3333 12.2669 29.3333 18.3334C29.3333 24.3999 24.3998 29.3334 18.3333 29.3334C12.2668 29.3334 7.33333 24.3999 7.33333 18.3334C7.33333 12.2669 12.2668 7.33341 18.3333 7.33341Z" fill="white"/>
-<path d="M20.922 15.741C21.6168 16.4377 22 17.358 22 18.3334H25.6667C25.6683 17.3698 25.4789 16.4155 25.1095 15.5256C24.74 14.6357 24.1979 13.8278 23.5143 13.1487C20.7387 10.3767 15.9262 10.3767 13.1523 13.1487L15.741 15.7447C17.1343 14.355 19.536 14.3587 20.922 15.741Z" fill="white"/>
-</svg>
-
+                  <button id="feed" type="button" class="btn btn-lg btn-block btn-info py-2 button-inactive" >
+                  <i class="fas fa-search fa-lg"></i>
                   </button>
                </div>
                <div class="col">
-                  <button type="button" class="btn btn-lg btn-block btn-info" >
-                  <svg class="pt-1" height="24" viewBox="0 0 37 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                     <path d="M17.526 7.26394L6.00161 16.7556V26.9999C6.00161 27.2651 6.10698 27.5195 6.29453 27.7071C6.48209 27.8946 6.73647 28 7.00172 28L14.0062 27.9819C14.2706 27.9806 14.5237 27.8746 14.7102 27.6872C14.8967 27.4998 15.0014 27.2461 15.0014 26.9818V20.9992C15.0014 20.734 15.1067 20.4796 15.2943 20.292C15.4818 20.1045 15.7362 19.9991 16.0015 19.9991H20.0019C20.2672 19.9991 20.5215 20.1045 20.7091 20.292C20.8967 20.4796 21.002 20.734 21.002 20.9992V26.9774C21.0016 27.109 21.0272 27.2394 21.0773 27.3611C21.1273 27.4828 21.2009 27.5934 21.2938 27.6866C21.3868 27.7798 21.4971 27.8537 21.6187 27.9042C21.7402 27.9547 21.8705 27.9806 22.0021 27.9806L29.0042 28C29.2694 28 29.5238 27.8946 29.7114 27.7071C29.8989 27.5195 30.0043 27.2651 30.0043 26.9999V16.7487L18.4824 7.26394C18.3469 7.15475 18.1782 7.09521 18.0042 7.09521C17.8302 7.09521 17.6615 7.15475 17.526 7.26394ZM35.7299 13.7153L30.5043 9.40792V0.750084C30.5043 0.551149 30.4253 0.360363 30.2846 0.219695C30.144 0.0790266 29.9532 0 29.7543 0H26.2539C26.0549 0 25.8641 0.0790266 25.7235 0.219695C25.5828 0.360363 25.5038 0.551149 25.5038 0.750084V5.28871L19.9075 0.684451C19.3705 0.242514 18.6966 0.000883439 18.0011 0.000883439C17.3056 0.000883439 16.6317 0.242514 16.0946 0.684451L0.272217 13.7153C0.196263 13.7781 0.133424 13.8552 0.0872884 13.9423C0.0411533 14.0293 0.0126269 14.1246 0.00333922 14.2227C-0.00594845 14.3208 0.00418463 14.4198 0.0331595 14.514C0.0621343 14.6082 0.109383 14.6957 0.172206 14.7716L1.76613 16.7094C1.82879 16.7855 1.90585 16.8486 1.99291 16.895C2.07997 16.9413 2.17532 16.9701 2.2735 16.9795C2.37168 16.989 2.47076 16.979 2.56507 16.9501C2.65939 16.9213 2.74708 16.8741 2.82313 16.8113L17.526 4.70115C17.6615 4.59197 17.8302 4.53242 18.0042 4.53242C18.1782 4.53242 18.3469 4.59197 18.4824 4.70115L33.1859 16.8113C33.2618 16.8741 33.3494 16.9213 33.4435 16.9503C33.5377 16.9793 33.6367 16.9894 33.7348 16.9801C33.8329 16.9708 33.9282 16.9423 34.0153 16.8962C34.1024 16.85 34.1795 16.7872 34.2423 16.7112L35.8362 14.7735C35.8989 14.6972 35.946 14.6092 35.9746 14.5146C36.0033 14.42 36.0129 14.3207 36.003 14.2223C35.9932 14.124 35.964 14.0286 35.9171 13.9415C35.8702 13.8545 35.8066 13.7776 35.7299 13.7153Z" fill="white"/>
-                  </svg>
-                  </button>button>
+                  <button id="account" type="button" class="btn btn-lg btn-block btn-info py-2 button-inactive" >
+                  <i class="fas fa-user fa-lg"></i>
+                  </button>
                </div>
             </div>
          </div>
@@ -98,6 +149,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
       <!-- JS needed for this page -->
       <script src="js/main.js"></script>
+      <script defer src="js/all.js"></script>
    </body>
 </html>
 <style type="text/css">
@@ -111,5 +163,9 @@ padding-left: 4px;
 .footer {
 box-shadow: 0 0px 0px rgb(0 0 0 / 20%);
 background-color: #fFF;
+}
+.navbar {
+border-top: 1px solid transparent;
+box-shadow: 0 1px 5px rgb(0 0 0 / 20%);
 }
 </style>
