--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
    </head>
    <body>
-      <!-- As a heading -->
+      <!-- Nav -->
       <div class="container  ">
          <nav class="navbar fixed-top navbar-light text-left  bg-info" style="padding: 0px;">
             
